// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions Table No rows passed  should render an empty table 1`] = `
Array [
  <div />,
  .emotion-0 {
  max-width: 50px;
}

<div
    className="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <table
      aria-label="collapsible table"
      className="MuiTable-root"
      role={null}
    >
      <thead
        className="MuiTableHead-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root MuiTableRow-head"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head"
            scope="col"
          />
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight"
            scope="col"
          >
            Transaction Date
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight"
            scope="col"
          >
            Merchant
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight"
            scope="col"
          >
            Amount
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head emotion-0"
            scope="col"
          />
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root"
        role={null}
      />
    </table>
  </div>,
]
`;

exports[`Transactions Table Rows of transactions passed should render an empty table 1`] = `
Array [
  <div />,
  .emotion-0 {
  max-width: 50px;
}

<div
    className="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <table
      aria-label="collapsible table"
      className="MuiTable-root"
      role={null}
    >
      <thead
        className="MuiTableHead-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root MuiTableRow-head"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head"
            scope="col"
          />
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight"
            scope="col"
          >
            Transaction Date
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight"
            scope="col"
          >
            Merchant
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight"
            scope="col"
          >
            Amount
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head emotion-0"
            scope="col"
          />
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root"
        role={null}
      >
        <div
          data-test="{\\"__typename\\":\\"Transaction\\",\\"id\\":\\"2dc97d4f-bbbe-4f58-944d-23eaa23bb3ba\\",\\"user\\":{\\"__typename\\":\\"User\\",\\"firstName\\":\\"tifa\\",\\"id\\":\\"203ddf…\\",\\"lastName\\":\\"lockhart\\"},\\"merchant\\":{\\"__typename\\":\\"Merchant\\",\\"description\\":\\"a shop with …\\",\\"name\\":\\"shop\\"},\\"description\\":\\"afweawef\\",\\"debit\\":true,\\"credit\\":false,\\"amount\\":100,\\"insertedAt\\":\\"2021-01-27T04:36:49\\"}"
        />
        <div
          data-test="{\\"__typename\\":\\"Transaction\\",\\"id\\":\\"b2f2f116-68e8-4b5f-9c8b-8c62425795b0\\",\\"user\\":{\\"__typename\\":\\"User\\",\\"firstName\\":\\"tifa\\",\\"id\\":\\"203ddf…\\",\\"lastName\\":\\"lockhart\\"},\\"merchant\\":{\\"__typename\\":\\"Merchant\\",\\"description\\":\\"a shop with …\\",\\"name\\":\\"shop\\"},\\"description\\":\\"asdfew2\\",\\"debit\\":true,\\"credit\\":false,\\"amount\\":3344,\\"insertedAt\\":\\"2021-01-27T04:39:59\\"}"
        />
        <div
          data-test="{\\"__typename\\":\\"Transaction\\",\\"id\\":\\"1df91896-3da4-429c-96a6-f39519250150\\",\\"user\\":{\\"__typename\\":\\"User\\",\\"firstName\\":\\"tifa\\",\\"id\\":\\"203ddf…\\",\\"lastName\\":\\"lockhart\\"},\\"merchant\\":{\\"__typename\\":\\"Merchant\\",\\"description\\":\\"a shop with …\\",\\"name\\":\\"shop\\"},\\"description\\":\\"sadf\\",\\"debit\\":false,\\"credit\\":true,\\"amount\\":100,\\"insertedAt\\":\\"2021-01-27T05:40:23\\"}"
        />
      </tbody>
    </table>
  </div>,
]
`;
